add event on branch

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main", "devel" ]
+    branches: [ "main", "devel" , "v2"]
   pull_request:
-    branches: [ "main", "devel" ]
+    branches: [ "main", "devel" ,"v2"]
 
 env:
   REGISTRY: ghcr.io
